chore: Fix Sonar URL whines (#169)